--- a/Version3/V3-Project-4/uni-sass/index.html
+++ b/Version3/V3-Project-4/uni-sass/index.html
@@ -15,7 +15,7 @@
 <body>
     <!---Start Header-->
     <div class="header">
-        <div class="container-fluid">
+        <div class="container">
             <div class="header-top">
                 <div class="header-top__logo"><svg preserveAspectRatio="xMinYMin" version="1.1" id="Layer_1-1179422406"
                         x="0px" y="0px" viewBox="0 0 68.9 68.9" style="enable-background:new 0 0 68.9 68.9;"
@@ -31,10 +31,10 @@
                     </svg></div>
                 <button class="header-top__btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
                 <ul class="header-top__menu">
-                    <li class="header-top__link">Home
+                    <li class="header-top__link"><a href="#" class="link-menu">Home</a> 
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -52,7 +52,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -71,7 +71,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -89,8 +89,8 @@
                                    <li>Portfolio Classic</li>
                                 </ul>
                             </li>
-                            <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                            <li class="hover-list" >
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -108,8 +108,8 @@
                                    <li>Blog Grid</li>
                                 </ul>
                             </li>
-                            <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                            <li class="hover-list" >
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -125,10 +125,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Pages
+                    <li class="header-top__link"><a href="#" class="link-menu">Pages</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -146,7 +146,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -165,7 +165,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -184,7 +184,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -203,7 +203,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -219,10 +219,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Features
+                    <li class="header-top__link"><a href="#" class="link-menu">Features</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -240,7 +240,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -259,7 +259,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -278,7 +278,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -297,7 +297,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -313,10 +313,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Works
+                    <li class="header-top__link"><a href="#" class="link-menu">Works</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -334,7 +334,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -353,7 +353,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -372,7 +372,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -391,7 +391,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -407,10 +407,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Blog
+                    <li class="header-top__link"><a href="#" class="link-menu">Blog</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -428,7 +428,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -447,7 +447,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -466,7 +466,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -485,7 +485,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -501,10 +501,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Shop
+                    <li class="header-top__link"><a href="#" class="link-menu">Shop</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -522,7 +522,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -541,7 +541,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -560,7 +560,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -579,7 +579,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
@@ -595,10 +595,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="header-top__link">Extra
+                    <li class="header-top__link"><a href="#" class="link-menu">Extra</a>
                         <ul class="menu-hover">
                             <li class="hover-list">
-                               <a class="list-link">Classic</a>
+                               <a class="list-link" href="#">Classic</a>
                                <ul class="menu-hover_list">
                                    <li>Classic Agency</li>
                                    <li>Classic Start-up</li>
@@ -616,7 +616,7 @@
                                </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Creative</a>
+                                <a class="list-link" href="#">Creative</a>
                                 <ul class="menu-hover_list">
                                     <li>Creative Marketing</li>
                                     <li>Creative Digital Agency</li>
@@ -635,7 +635,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Portfolio</a>
+                                <a class="list-link" href="#">Portfolio</a>
                                <ul class="menu-hover_list">
                                    <li>Portfolio Agency</li>
                                    <li>Portfolio Minimal</li>
@@ -654,7 +654,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Blog</a>
+                                <a class="list-link" href="#">Blog</a>
                                <ul class="menu-hover_list">
                                    <li>Blog Magazine</li>
                                    <li>Blog Newspaper</li>
@@ -673,7 +673,7 @@
                                 </ul>
                             </li>
                             <li class="hover-list">
-                                <a class="list-link">Classic</a>
+                                <a class="list-link" href="#">Classic</a>
                                 <ul class="menu-hover_list">
                                     <li>Classic Agency</li>
                                     <li>Classic Agency</li>
